--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -18,24 +18,24 @@ ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
 ble-sec = ["nrf-softdevice/ble-sec"]
 
 [dependencies]
-embassy-executor = { version = "0.3.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "nightly", "defmt", "integrated-timers"]}
-embassy-time = { version = "0.1.0", features = ["nightly", "defmt", "defmt-timestamp-uptime"]}
-embassy-sync = { version = "0.2.0" }
-embassy-nrf = { version = "0.1.0", features = [ "nightly", "defmt", "nrf52840", "gpiote", "time-driver-rtc1" ]}
-cortex-m = "0.7.2"
-cortex-m-rt = "0.7.0"
-defmt = "0.3"
+embassy-executor = { version = "0.3.3", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
+embassy-time = { version = "0.2.0", features = ["defmt", "defmt-timestamp-uptime"]}
+embassy-sync = { version = "0.5.0" }
+embassy-nrf = { version = "0.1.0", features = ["defmt", "nrf52840", "gpiote", "time-driver-rtc1" ]}
+cortex-m = "0.7.7"
+cortex-m-rt = "0.7.3"
+defmt = "0.3.5"
 defmt-rtt = "0.4.0"
-panic-probe = { version = "0.3", features= ["print-defmt"] }
-nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["nightly", "defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
+panic-probe = { version = "0.3.1", features= ["print-defmt"] }
+nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt", "nrf52840", "s140", "ble-peripheral", "ble-central", "critical-section-impl"] }
 nrf-softdevice-s140 = { version = "0.1.1", path = "../nrf-softdevice-s140" }
-embedded-storage = "0.3.0"
-embedded-storage-async = "0.4.0"
-futures = { version = "0.3.5", default-features = false }
-fixed = "1.2.0"
-heapless = "0.7.1"
-atomic-pool = "1.0.0"
-static_cell = "1.0.0"
+embedded-storage = "0.3.1"
+embedded-storage-async = "0.4.1"
+futures = { version = "0.3.29", default-features = false }
+fixed = "1.24.0"
+heapless = "0.8.0"
+atomic-pool = "1.0.1"
+static_cell = "2.0.0"
 
 [[bin]]
 name = "ble_bas_peripheral"
