--- a/nrf-softdevice/Cargo.toml
+++ b/nrf-softdevice/Cargo.toml
@@ -34,8 +34,6 @@ critical-section-impl = ["critical-section/restore-state-bool"]
 
 usable-from-interrupts = []
 
-nightly = ["dep:embedded-storage-async"]
-
 # Workaround l2cap credit bug. If set, infinite credits are issued
 # to the peer in batches. The `credits` config when establishing the channel is ignored.
 # https://devzone.nordicsemi.com/f/nordic-q-a/81894/s140-7-3-0-softdevice-assertion-failed-at-pc-0xa806-using-l2cap
@@ -50,15 +48,15 @@ log = { version = "0.4.11", optional = true }
 critical-section = { version = "1.0", optional = true }
 
 num_enum = { version = "0.7.0", default-features = false }
-embassy-sync = { version = "0.2.0" }
-embassy-futures = { version = "0.1.0" }
+embassy-sync = { version = "0.5.0" }
+embassy-futures = { version = "0.1.1" }
 cortex-m = "0.7.2"
 cortex-m-rt = ">=0.6.15,<0.8"
-heapless = "0.7.1"
+heapless = "0.8.0"
 fixed = "1.5.0"
 futures = { version = "0.3.17", default-features = false }
-embedded-storage = "0.3.0"
-embedded-storage-async = { version = "0.4.0", optional = true }
+embedded-storage = "0.3.1"
+embedded-storage-async = { version = "0.4.1" }
 
 nrf52805-pac  = { version = "0.12.0", features = ["rt"], optional = true }
 nrf52810-pac  = { version = "0.12.0", features = ["rt"], optional = true }
