--- a/nrf-softdevice/Cargo.toml
+++ b/nrf-softdevice/Cargo.toml
@@ -81,6 +81,8 @@ nrf-softdevice-macro = { version = "0.1.0", path = "../nrf-softdevice-macro" }
 [package.metadata.docs.rs]
 targets = ["thumbv7em-none-eabi"]
 features = ["nrf52840", "s140", "ble-central", "ble-peripheral", "ble-l2cap", "ble-gatt-server", "ble-gatt-client", "ble-rssi", "ble-sec"]
+rustdoc-args = ["--cfg", "docsrs"]
+
 
 [package.metadata.embassy_docs]
 src_base = "https://github.com/embassy-rs/nrf-softdevice/blob/nrf-softdevice-mbr-v$VERSION/nrf-softdevice/src/"
