--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -5,7 +5,12 @@ name = "nrf-softdevice-examples"
 version = "0.1.0"
 
 [features]
-default = ["ble-l2cap", "ble-gatt-server", "ble-gatt-client", "ble-sec"]
+default = [
+    "ble-l2cap",
+    "ble-gatt-server",
+    "ble-gatt-client",
+    "ble-sec",
+]
 
 ble-l2cap = ["nrf-softdevice/ble-l2cap"]
 ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
@@ -16,44 +21,26 @@ nrf52832 = [
   "embassy-nrf/nrf52832",
   "nrf-softdevice/nrf52832",
   "nrf-softdevice/s132",
-  "dep:nrf-softdevice-s132",
+  "dep:nrf-softdevice-s132"
 ]
 nrf52840 = [
   "embassy-nrf/nrf52840",
   "nrf-softdevice/nrf52840",
   "nrf-softdevice/s140",
-  "dep:nrf-softdevice-s140",
+  "dep:nrf-softdevice-s140"
 ]
 
 [dependencies]
-embassy-executor = { version = "0.5.0", features = [
-  "arch-cortex-m",
-  "executor-thread",
-  "executor-interrupt",
-  "defmt",
-  "integrated-timers",
-] }
-embassy-time = { version = "0.3.0", features = [
-  "defmt",
-  "defmt-timestamp-uptime",
-] }
+embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
+embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"]}
 embassy-sync = { version = "0.5.0" }
-embassy-nrf = { version = "0.1.0", features = [
-  "defmt",
-  "gpiote",
-  "time-driver-rtc1",
-] }
+embassy-nrf = { version = "0.1.0", features = ["defmt", "gpiote", "time-driver-rtc1" ]}
 cortex-m = "0.7.7"
 cortex-m-rt = "0.7.3"
 defmt = "0.3.5"
 defmt-rtt = "0.4.0"
-panic-probe = { version = "0.3.1", features = ["print-defmt"] }
-nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = [
-  "defmt",
-  "ble-peripheral",
-  "ble-central",
-  "critical-section-impl",
-] }
+panic-probe = { version = "0.3.1", features= ["print-defmt"] }
+nrf-softdevice = { version = "0.1.0", path = "../nrf-softdevice", features = ["defmt", "ble-peripheral", "ble-central", "critical-section-impl"] }
 embedded-storage = "0.3.1"
 embedded-storage-async = "0.4.1"
 futures = { version = "0.3.29", default-features = false }
@@ -79,10 +66,6 @@ required-features = ["ble-gatt-client"]
 
 [[bin]]
 name = "ble_peripheral_onoff"
-required-features = ["ble-gatt-server"]
-
-[[bin]]
-name = "ble_keyboard_peripheral_builder"
 required-features = ["ble-gatt-server"]
 
 [[bin]]
