--- a/nrf-softdevice/Cargo.toml
+++ b/nrf-softdevice/Cargo.toml
@@ -8,6 +8,7 @@ description = "Rust interface to nRF SoftDevice"
 repository = "https://github.com/embassy-rs/nrf-softdevice"
 categories = ["embedded", "hardware-support", "no-std"]
 keywords = ["arm", "cortex-m", "nrf52", "nrf-softdevice"]
+rust = "1.76"
 
 [features]
 
