--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -36,6 +36,9 @@ nrf52840 = [
   "dep:nrf-softdevice-s140"
 ]
 
+nrf52840-dk = ["nrf52840"]
+microbit-v2 = ["nrf52833"]
+
 [dependencies]
 embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
 embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"]}
