--- a/nrf-softdevice-macro/Cargo.toml
+++ b/nrf-softdevice-macro/Cargo.toml
@@ -15,7 +15,7 @@ quote = "1.0.7"
 darling = "0.13.4"
 proc-macro2 = "1.0.18"
 Inflector = "0.11.4"
-uuid = { version = "1.2.2", default-features = false }
+uuid = "1.2.2"
 
 [lib]
 proc-macro = true
