--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -41,10 +41,10 @@ nrf52832-dk = ["nrf52832"]
 microbit-v2 = ["nrf52833"]
 
 [dependencies]
-embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]}
-embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"]}
+embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"]}
+embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"]}
 embassy-sync = { version = "0.6.0" }
-embassy-nrf = { version = "0.2.0", features = ["defmt", "gpiote", "time-driver-rtc1" ]}
+embassy-nrf = { version = "0.3.0", features = ["defmt", "gpiote", "time-driver-rtc1" ]}
 cortex-m = "0.7.7"
 cortex-m-rt = "0.7.3"
 defmt = "0.3.5"
